[project]
name = "orbital"
version = "0.1.0"
description = "Python library for global state management"
authors = [
    {name = "Bruno Pinheiro", email = "bruno.opinheiro@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
taskipy = "^1.14.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
